# typespark

./: LICENSE  README.md  main.py  pyproject.toml
tests/: conftest.py  groups.py  test.py  test_array.py  test_basic.py  test_column.py  test_functions.py  test_functions_array.py  test_functions_date_time.py  test_functions_math.py  test_functions_misc.py  test_functions_string.py  test_groups.py  test_schema.py  test_struct.py  utils.py
typespark/: __init__.py  _compatibility.py  aggregates.py  attrs_descriptor.py  base.py  columns.py  data_contract.py  dataframe.py  define.py  exceptions.py  field_transforms.py  generator.py  groups.py  interface.py  literals.py  metadata.py  mixins.py  schema.py  serialization_alias.py  struct.py  type_alias.py  typed_dataframe.py  utils.py
typespark/columns/: __init__.py  array.py  columns.py  generator.py  groups.py  struct.py  utils.py
typespark/data_contract/: __init__.py  cli.py  generate.py  mixins.py  serialize.py
typespark/functions/: __init__.py  _type_aliases.py  aggregates.py  array.py  date_time.py  functions.py  math.py  misc.py  string.py  window_functions.py
typespark/schema/: __init__.py  schema.py
