[project]
name = "typespark"
version = "1.0.0"
description = ""
authors = [{ name = "Elias Ågeby", email = "elias.ageby@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "attrs>=25.1.0,<26",
    "pyyaml>=6.0.2,<7",
    "simple-parsing>=0.1.7,<0.2",
]

[project.optional-dependencies]
pyspark = ["pyspark>=3.5.2,<=4.0"]

[project.scripts]
typespark = "typespark.data_contract.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2",
    "pytest>=8.3.4,<9",
    "pandas>=2.2.3,<3",
    "pyarrow>=19.0.0,<20",
    "prettyprinter>=0.18.0,<0.19",
    "devtools>=0.12.2,<0.13",
    "pyspark>=3.5.2,<=4.0",
]
datacontract = [
    "black>=25.1.0,<26",
    "simple-parsing>=0.1.7,<0.2",
    "datacontract-specification>=1.2.0,<2",
    "click>=8.2.1,<9",
]

[tool.uv]
default-groups = [
    "dev",
    "datacontract",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
